<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prp"
    tools:context=".ClientPersonalInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/personalinfo"
                app:navigationIcon="@drawable/ic_menu"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="26dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="08dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/bootstrap_h5_text_size" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_border"
                        android:inputType="textCapCharacters"
                        android:padding="08dp"
                        android:textSize="@dimen/bootstrap_h3_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="08dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname"
                        android:textSize="@dimen/bootstrap_h5_text_size" />

                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_border"
                        android:inputType="text"
                        android:padding="08dp"
                        android:textSize="@dimen/bootstrap_h3_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="08dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname"
                        android:textSize="@dimen/bootstrap_h5_text_size" />

                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="08dp"
                        android:background="@drawable/background_border"
                        android:inputType="text"
                        android:textSize="@dimen/bootstrap_h3_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="08dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contactemail"
                        android:textSize="@dimen/bootstrap_h5_text_size" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_border"
                        android:inputType="textEmailAddress"
                        android:padding="08dp"
                        android:textSize="@dimen/bootstrap_h3_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="08dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contactphone"
                        android:textSize="@dimen/bootstrap_h5_text_size" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="08dp"
                        android:background="@drawable/background_border"
                        android:inputType="phone"
                        android:textSize="@dimen/bootstrap_h3_text_size" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="08dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textSize="@dimen/bootstrap_h4_text_size" />

                    <EditText
                        android:id="@+id/datePicker1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="08dp"
                        android:background="@drawable/background_border"
                        android:inputType="date"
                        android:textSize="@dimen/bootstrap_h3_text_size"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_margin="8dp"
                        android:text="@string/cancel"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_margin="8dp"
                        android:layout_toEndOf="@id/cancel"
                        android:text="@string/save"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                    <Button
                        android:id="@+id/edit"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:text="@string/edit"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>