<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/full_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_border"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/background_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="@dimen/bootstrap_h5_text_size" />

                <RadioGroup
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:checkedButton="@id/writing"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/writing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/writing"
                        android:textSize="@dimen/bootstrap_h3_text_size" />

                    <RadioButton
                        android:id="@+id/printing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/printing"
                        android:textSize="@dimen/bootstrap_h3_text_size" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="@dimen/bootstrap_h4_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="05dp"
            android:background="@drawable/background_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howmanydays"
                android:textSize="@dimen/bootstrap_h5_text_size" />

            <Spinner
                android:id="@+id/endServiceTime"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pages_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="05dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pages">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true"
                        android:textSize="@dimen/bootstrap_h4_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="05dp"
                    android:padding="10dp"
                    android:background="@drawable/background_border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/bootstrap_h5_text_size"
                        android:text="@string/colored" />

                    <Spinner
                        android:id="@+id/colored"
                        android:layout_marginTop="3dp"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="05dp"
            android:padding="10dp"
            android:background="@drawable/background_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/papersize"
                android:textSize="@dimen/bootstrap_h5_text_size" />

            <Spinner
                android:id="@+id/papersize"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/details_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="05dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/bootstrap_h4_text_size" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:weightSum="2">

                <Button
                    android:id="@+id/saverqst"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/bootstrap_h4_text_size" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/prgs"
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>